# tap-netsuite

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: veracode-cursor-agent-fix.yml  veracode-static-scan.yml
tap_netsuite/: __init__.py  sync.py
tap_netsuite/netsuite/: __init__.py  exceptions.py  netsuite_client.py  netsuite_connection.py  transaction_entities.py
tap_netsuite/netsuite/schemas/: object_definition.json
