[tool.poetry]
name = "tap-netsuite"
version = "1.7.0"
description = "Singer.io tap for extracting data for NetSuite"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.7.1"
netsuitesdk = {git = "ssh://git@github.com/symon-ai/netsuite-sdk-py.git", tag = "v2.7.6"}

requests = "^2.31.0"
certifi = ">=2024.7.4"
singer-python = "5.3.1"
xmltodict = "0.11.0"
jsonpath-ng = "1.4.3"
jsonschema = "2.6.0"
pytz = "2018.4"
urllib3 = "^1.26.17"
idna = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tap-netsuite = "tap_netsuite:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
